trunk/Archive2/fc/e501145a121323/output
main.cpp:2:5: error: function with trailing return type must specify return type 'auto', not 'int'
    auto operator int() -> int {
    ^~~~
1 error generated.
